discussion/kv_engine/183265/183265_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Drop ModifyCollection events

If a collection is dropped, the modify event must be purged
along with any normal collection items. All of the dropKey
paths were setup to ignore any system events, this is no
longer true with the new event.

Change-Id: Ia89d4b7a56e9f3b5b23dd176e5d00da88bd83f3e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-28 15:03:26.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-28 15:03:57.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326700/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-28 17:38:37.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/605/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23: error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
        auto modify = SystemEventFactory::isModifyCollection(key);
                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/605/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/605/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/581/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/581/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/767/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/collections/scan_context.cc(38): error C2653: "SystemEventFactory": is not a class or namespace name ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/767/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/605/ : FAILURE

Compile error at [2022-11-28T15:38:58.361Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/605/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/863/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-11-28T16:39:10.837Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-11-28T16:39:10.837Z] Value of: dropped.empty()
[2022-11-28T16:39:10.837Z]   Actual: false
[2022-11-28T16:39:10.837Z] Expected: true
[2022-11-28T16:39:10.837Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (26 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/863/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/627/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-11-28T17:01:32.555Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-11-28T17:01:32.555Z] Value of: dropped.empty()
[2022-11-28T17:01:32.555Z]   Actual: false
[2022-11-28T17:01:32.555Z] Expected: true
[2022-11-28T17:01:32.555Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (15 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/627/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/615/ : FAILURE

Compile error at [2022-11-28T17:32:24.077Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/615/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/614/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-11-28T17:04:41.382Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-11-28T17:04:41.382Z] Value of: dropped.empty()
[2022-11-28T17:04:41.382Z]   Actual: false
[2022-11-28T17:04:41.382Z] Expected: true
[2022-11-28T17:04:41.382Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (44 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/614/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/624/ : FAILURE

Compile error at [2022-11-28T17:35:28.548Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/624/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21481/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/597/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
